<resources>
    <string name="asset_statements" translatable="false">
        [{
          \"include\": \"https://globalmeet.com/.well-known/assetlinks.json\"
        }]
    </string>
    <string name="continue_txt">Continue</string>
    <string name="dialog_ok">OK</string>
    <string name="greet_morning">Good morning,</string>
    <string name="greet_afternoon">Good afternoon,</string>
    <string name="greet_evening">Good evening,</string>
    <string name="join_meeting">Join a \nmeeting</string>
    <string name="start_meeting">Start my \nmeeting</string>
    <string name="close">Close</string>
    <string name="skip_enter_url">Skip</string>
    <string name="welcome_slide_intro_welcome">Welcome to \nGlobalMeet</string>
    <string name="welcome_slide_intro_join">Join meetings \nquickly from anywhere</string>
    <string name="welcome_slide_audio_content">Easily see who is talking \nand manage audio</string>
    <string name="welcome_slide_files_content">View content shared \nby others</string>
    <string name="welcome_slide_chat">Chat with everyone \nin the meeting</string>
    <string name="sign_in">Sign In</string>
    <string name="str_ok">OK</string>
    <string name="cd_drawer_icon">Navigation drawer</string>
    <string name="tab_text_guest">Guests</string>
    <string name="tab_text_metting">Meeting</string>
    <string name="tab_text_chat">Chats</string>
    <string name="btn_title_join">Join</string>
    <string name="title_recently_joined">Recents</string>
    <string name="search_join_header">Join this URL</string>
    <string name="no_recent_meetings">Search for a meeting URL to join a meeting now. Results will appear here.</string>
    <string name="no_results">No results</string>
    <string name="enter_invalid_url">Invalid URL</string>
    <string name="enter_url_join_button">Join</string>
    <string name="one_participant">1 participant</string>
    <string name="participants">participants</string>
    <string name="no_participants">no participant</string>
    <string name="exit">Exit</string>
    <string name="speaking">Speaking</string>
    <string name="enter_url_search_hint">Enter URL</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="permission_call_rationale">Calling permission is required to join meeting</string>
    <string name="permission_rationale_alert_title">Are you sure?</string>
    <string name="rationale_alert_option_allow">Allow</string>
    <string name="rationale_alert_option_deny">Deny</string>
    <string name="invalid_access_token">Invalid access token, please login again to continue.</string>
    <string name="share_with">Share with</string>
    <string name="share_this_app_subject">Check out GlobalMeet</string>
    <string name="share_this_app_content">I am using GlobalMeet as my new meeting app and I think you\'d find it useful. Check it out - https://globalmeet.com</string>
    <string name="share_this_app_hash_tag_content">I am using #GlobalMeet as my new meeting app and I think you\'d find it useful. Check it out - https://globalmeet.com</string>
    <string name="mute_meeting">mute button</string>
    <string name="host_exit_leave_meeting_confirmation_msg">Do you wish to leave, or end the meeting for all?</string>
    <string name="host_exit_dialog_exit_btn">End Meeting</string>
    <string name="host_exit_dialog_leave_btn">Leave Meeting</string>
    <string name="host_exit_dialog_negative_btn">Cancel</string>
    <string name="guest_exit_leave_meeting_confirmation_msg">Are you sure you wish to leave the meeting?</string>
    <string name="guest_exit_dialog_positive_btn">Leave</string>
    <string name="guest_exit_dialog_negative_btn">Cancel</string>
    <string name="loading">Loading</string>
    <string name="connect_voip">Connect now with VoIP</string>
    <string name="dial_in_btn_txt">Dial in</string>
    <string name="dial_in">Dial in with my phone</string>
    <string name="call_phone">Call my phone</string>
    <string name="phone_number">Phone number</string>
    <string name="call_me_btn_txt">Call me</string>
    <string name="activate_speaker">Activate speakerphone</string>
    <string name="use_speaker">Use speakerphone</string>
    <string name="mute_me">Mute my mic after connecting</string>
    <string name="mute_all">ALL</string>
    <string name="mute_all_participants">Mute all guests</string>
    <string name="unmute_all_participants">Unmute All</string>
    <string name="do_not_connect_audio">Don\'t connect my audio</string>
    <string name="audio_selection_msg"><![CDATA[How would you<br/> like to talk in<br/> %1$s meeting?]]></string>
    <string name="audio_selection_msg_own_room">How would you like to talk in your meeting?</string>
    <string name="invite_participant">Invite participant</string>
    <string name="change_connection">Change connection</string>
    <string name="disconnect_audio">Disconnect audio</string>
    <string name="lock_meeting">Lock meeting</string>
    <string name="unlock_meeting">Unlock meeting</string>
    <string name="record_meeting">Record</string>
    <string name="turn_off_waiting">Turn off waiting room</string>
    <string name="people_are_waiting_message">People are waiting to join. Manage the waiting room to admit or deny them.</string>
    <string name="meeting_locked_error_msg">The meeting you want to join is locked, please contact the meeting host</string>
    <string name="is_talking">is talking</string>
    <string name="currently_talking">are currently talking</string>
    <string name="was_taking">was the last to talk</string>
    <string name="were_taking">were last to talk</string>
    <string name="no_one_taking">No one has spoken yet</string>
    <string name="someone_presenting_screen_share"><![CDATA[<b>%s</b> is screen sharing]]></string>
    <string name="you_are_not_sharing_camera">You are no longer sharing your camera</string>
    <string name="you_are_sharing_camera">You are sharing your camera</string>
    <string name="someone_sharing_camera">Someone is sharing their camera</string>
    <string name="someone_sharing_whiteboard">Someone is sharing the whiteboard</string>
    <string name="presenting_whiteboard">Whiteboard</string>
    <string name="someone_is_presenting_a_file">File presentation</string>
    <string name="someone_sharing_with_one_camera"><![CDATA[Screenshare & %s webcam]]></string>
    <string name="someone_sharing_with_cameras"><![CDATA[Screenshare & %s webcams]]></string>
    <string name="someone_presenting_with_cameras"><![CDATA[File presentation & %s webcams]]></string>
    <string name="someone_presenting_with_one_camera"><![CDATA[File presentation & %s webcam]]></string>
    <string name="someone_sharing_whiteboard_with_cameras"><![CDATA[Whiteboard & %s webcams]]></string>
    <string name="someone_sharing_whiteboard_with_one_camera"><![CDATA[Whiteboard & %s webcam]]></string>
    <string name="presenting_webcams_count"><![CDATA[%s Webcams]]></string>
    <string name="presenting_webcams_count_lowercase"><![CDATA[%s webcams]]></string>
    <string name="your_webcam_is_on">Your webcam is on</string>
    <string name="your_webcam_is_off">Your webcam is off</string>
    <string name="someone_is_presenting">Someone is presenting</string>
    <string name="screenshare_with_webcam_pagination"><![CDATA[Screenshare & %s]]></string>
    <string name="file_with_webcam_pagination"><![CDATA[File presentation & %s]]></string>
    <string name="whiteboard_with_webcam_pagination"><![CDATA[Whiteboard & %s]]></string>
    <string name="webcam_page_info"><![CDATA[%s webcams (%s-%s)]]></string>
    <string name="low_bandwidth_mode_on">Low Bandwidth Mode: Turn on</string>
    <string name="low_bandwidth_mode_off">Low Bandwidth Mode: Turn off</string>
    <string name="low_bandwidth_mode">Low Bandwidth Mode</string>
    <string name="low_bandwidth_mode_cam_hidden">Low Bandwidth Mode (Webcams hidden)</string>
    <string name="preparingToRecordToast">Preparing to record...</string>
    <string name="recordingStopped">Recording ended. Link will be emailed when ready</string>
    <string name="speakerTurnOn">Speaker: Turn on</string>
    <string name="speakerTurnOff">Speaker: Turn off</string>
    <string name="turn_on_speaker">Speaker on</string>
    <string name="turn_off_speaker">Speaker off</string>
    <string name="internet_not_connected">Internet not available</string>
    <string name="voip_not_enabled">VoIP not enabled for this user</string>
    <string name="voip_connect_failed_try_something_else">Sorry. We\'re unable to connect to VoIP audio. Please try using \'Call my phone\' or dial-in.</string>
    <string name="choose_dial_in_number">Choose a number to dial in to the meeting.</string>
    <string name="no_dialin_numbers">No dial in numbers found</string>
    <string name="dial_in_not_enabled">DialIn not enabled</string>
    <string name="dial_out_not_enabled">Dial Out not enabled</string>
    <string name="dial_in_number">Dial in number</string>
    <string name="search_string">Search</string>
    <string name="please_add_phone_number">Please add a phone number</string>
    <string name="please_valid_phone_number">Please enter a valid phone number</string>
    <string name="please_enter_valid_country_code">Please enter a valid country code</string>
    <string name="please_select_phone_number">Please select a phone number</string>
    <string name="number_already_exist_in_list">Number already exists in  list</string>
    <string name="software_credits">Software Credits</string>
    <string name="contact_us">Contact Us</string>
    <string name="call_me">Call me</string>
    <string name="add_number">Add number</string>
    <string name="call_my_phone">Call my phone</string>
    <string name="add_number_title">Add number</string>
    <string name="phone_number_selection_msg">Select a number to talk in the meeting or enter a new one.</string>
    <string name="enter_phone_number_sub_title">Enter a phone number to talk in the meeting.</string>
    <string name="include_country_code">Include country code</string>
    <string name="phone_num_example">555 555 5555</string>
    <string name="cntry_code_example">+1</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="support_msg_on_meeting_join">Check your email or calendar invite for a meeting link, or contact your meeting host.</string>
    <string name="trouble_joining_title">Trouble joining?</string>
    <string name="action_contact_support">Contact Support</string>
    <string name="primary_access_number">Primary Access Number</string>
    <string name="invalid_phone_number">Please enter proper phone number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="update_name">Update Name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="select_room">Select Room</string>
    <string name="default_meeting_url">Default meeting URL</string>
    <string name="display_name_in_meeting">Display name in meetings</string>
    <string name="reset_password">Reset / Forgot Password</string>
    <string name="client_Id">Client ID</string>
    <string name="send_chat">Send</string>
    <string name="default_room_title">Default Meeting URL</string>
    <string name="display_name_msg">Display name \nin meetings</string>
    <string name="btn_update_name">Update</string>
    <string name="client_id">client id</string>
    <string name="start_recording">Start Recording</string>
    <string name="private_chat">Private Chat</string>
    <string name="enable_private_chat">Enable Private Chat</string>
    <string name="save">Save</string>
</resources>