<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp_8"
    android:layout_marginTop="@dimen/dp_8"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_start_recording"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:backgroundTint="@android:color/white"
        android:drawablePadding="@dimen/dp_32"
        android:drawableStart="@drawable/record"
        android:gravity="start|center_vertical"
        android:text="@string/start_recording"
        android:textColor="@color/overflow_menu_text_color"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_change_connection"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_52_dp"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:backgroundTint="@android:color/white"
        android:drawablePadding="@dimen/dp_32"
        android:drawableStart="@drawable/change_connection"
        android:gravity="start|center_vertical"
        android:text="@string/change_connection"
        android:clickable="true"
        android:textColor="@color/overflow_menu_text_color"
        android:textSize="16sp"
        android:focusable="true" />

    <TextView
        android:id="@+id/tv_disconnect_audio"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_52_dp"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:backgroundTint="@android:color/white"
        android:drawablePadding="@dimen/dp_32"
        android:drawableStart="@drawable/change_connection"
        android:gravity="start|center_vertical"
        android:text="@string/disconnect_audio"
        android:clickable="true"
        android:textColor="@color/overflow_menu_text_color"
        android:textSize="16sp"
        android:focusable="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_turn_low_bandwidth_on"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_52_dp"
        android:layout_marginEnd="@dimen/dp_16"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:layout_marginStart="@dimen/dp_16"
        android:backgroundTint="@android:color/white"
        android:drawablePadding="@dimen/dp_32"
        android:drawableStart="@drawable/ic_lowbandwidth"
        android:gravity="start|center_vertical"
        android:text="@string/low_bandwidth_mode_on"
        android:clickable="true"
        android:textColor="@color/overflow_menu_text_color"
        android:textSize="16sp"
        android:focusable="true" />

    <TextView
        android:id="@+id/tv_turn_low_bandwidth_off"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_52_dp"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:backgroundTint="@android:color/white"
        android:drawablePadding="@dimen/dp_32"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:drawableStart="@drawable/ic_lowbandwidth"
        android:gravity="start|center_vertical"
        android:text="@string/low_bandwidth_mode_off"
        android:clickable="true"
        android:textColor="@color/overflow_menu_text_color"
        android:textSize="16sp"
        android:focusable="true" />
    <TextView
        android:id="@+id/tv_mute_all_participants"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@android:color/white"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:drawablePadding="32dp"
        android:drawableStart="@drawable/mic_off"
        android:gravity="start|center_vertical"
        android:text="@string/mute_all_participants"
        android:textColor="@color/overflow_menu_text_color"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tv_unmute_all_participants"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@android:color/white"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:drawablePadding="32dp"
        android:drawableStart="@drawable/mic"
        android:gravity="start|center_vertical"
        android:text="@string/unmute_all_participants"
        android:textColor="@color/overflow_menu_text_color"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/tv_speaker_turn_on"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:backgroundTint="@android:color/white"
        android:drawablePadding="@dimen/dp_32"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:drawableStart="@drawable/speaker_on"
        android:gravity="start|center_vertical"
        android:text="@string/speakerTurnOn"
        android:textColor="@color/overflow_menu_text_color"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tv_speaker_turn_off"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:backgroundTint="@android:color/white"
        android:drawablePadding="@dimen/dp_32"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:drawableStart="@drawable/speaker_off"
        android:gravity="start|center_vertical"
        android:text="@string/speakerTurnOff"
        android:textColor="@color/overflow_menu_text_color"
        android:textSize="16sp"
        />
    <!--<TextView-->
        <!--android:id="@+id/tv_help"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/dp_48"-->
        <!--android:layout_marginEnd="@dimen/dp_16"-->
        <!--android:layout_marginStart="@dimen/dp_16"-->
        <!--android:backgroundTint="@android:color/white"-->
        <!--android:drawablePadding="@dimen/dp_32"-->
        <!--android:drawableStart="@drawable/menu_help_icon"-->
        <!--android:gravity="start|center_vertical"-->
        <!--android:text="@string/help"-->
        <!--android:clickable="true"-->
        <!--android:textColor="@color/overflow_menu_text_color"-->
        <!--android:textSize="16sp" />-->

</LinearLayout>