<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:text="@string/guest_exit_leave_meeting_confirmation_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_meeting_room_guest_cnfrm_msg"
        android:textSize="22sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"
        android:textColor="@color/dialog_text_meeting_room"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right">

        <TextView
            android:text="@string/guest_exit_dialog_negative_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_guest_dialog_no"
            android:textSize="15sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textColor="@color/dialog_btn_text_color"
            android:gravity="end"
            android:textAllCaps="true"
            android:layout_marginBottom="20dp"
            android:clickable="true"/>

        <TextView
            android:text="@string/guest_exit_dialog_positive_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_guest_dialog_yes"
            android:textSize="15sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textColor="@color/cancel_btn_text_color"
            android:gravity="end"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:textAllCaps="true"
            android:clickable="true"/>
    </LinearLayout>

</LinearLayout>